# Chocco-Engine

./: CMakeLists.txt  LICENSE  README.md
cmake/: noud-config.cmake  sdl2-config.cmake  sdl2_image-config.cmake  sdl2_mixer-config.cmake  sdl2_ttf-config.cmake
include/ChoccoEngine/: Cmath.h  IMG_init.h  MIX_init.h  SDLExt.h  SDL_init.h  TTF_init.h  animatedSprite.h  animator.h  audio.h  color.h  error.h  font.h  gameManager.h  gameVar.h  group.h  hitbox.h  initAll.h  kinematicObj.h  loaders.h  object.h  renderer.h  sprite.h  spriteGroup.h  tilemap.h  timer.h
src/: main.cpp
src/ChoccoEngine/: gameManager.cpp  gameManager.h  renderer.cpp  renderer.h
src/ChoccoEngine/init/: IMG_init.cpp  IMG_init.h  MIX_init.cpp  MIX_init.h  SDL_init.cpp  SDL_init.h  TTF_init.cpp  TTF_init.h  initAll.cpp  initAll.h
src/ChoccoEngine/util/: Cmath.cpp  SDLExt.cpp  SDL_Error.cpp  color.cpp  error.cpp  error.h  loaders.cpp  loaders.h  math.cpp  math.h
